fix: paragraph spacing

--- a/zola/sass/bootstrap/scss/_reboot.scss
+++ b/zola/sass/bootstrap/scss/_reboot.scss
@@ -128,7 +128,7 @@ h6 {
 // bottom margin to use `rem` units instead of `em`.
 
 p {
-  margin-top: 0;
+  margin-top: $paragraph-margin-top;
   margin-bottom: $paragraph-margin-bottom;
 }
 
