--- a/zola/sass/bootstrap/scss/_variables.scss
+++ b/zola/sass/bootstrap/scss/_variables.scss
@@ -299,6 +299,7 @@ $stretched-link-z-index:                  1 !default;
 // Style p element.
 
 $paragraph-margin-bottom:   1rem !default;
+$paragraph-margin-top:   1rem !default;
 
 
 // Grid breakpoints
